@@ -324,3 +324,11 @@ RocksDBKeyBounds RocksDBIndex::getBounds(Index::IndexType type,
 std::pair<RocksDBCuckooIndexEstimator<uint64_t>*, uint64_t> RocksDBIndex::estimator() const {
   return std::make_pair(nullptr, 0);
 }
+
+void RocksDBIndex::applyCommitedEstimates(
+    std::vector<uint64_t> const& inserts,
+    std::vector<uint64_t> const& removes) {
+  // This function is required to be overloaded by indexes with Estimates. All other should not call this function.
+  // In Production this call will be ignored, it is not critical
+  TRI_ASSERT(false);
+}
