@@ -90,6 +90,16 @@ class RocksDBTransactionCollection final : public TransactionCollection {
                     uint64_t operationSize, TRI_voc_rid_t revisionId);
   void commitCounts();
 
+  /// @brief Every index can track hashes inserted into this index
+  ///        Used to update the estimate after the trx commited
+  void trackIndexInsert(uint64_t idxObjectId, uint64_t hash);
+
+  /// @brief Every index can track hashes removed from this index
+  ///        Used to update the estimate after the trx commited
+  void trackIndexRemove(uint64_t idxObjectId, uint64_t hash);
+
+
+
  private:
   /// @brief request a lock for a collection
   /// returns TRI_ERROR_LOCKED in case the lock was successfully acquired
@@ -110,6 +120,13 @@ class RocksDBTransactionCollection final : public TransactionCollection {
   uint64_t _numUpdates;
   uint64_t _numRemoves;
   bool _usageLocked;
+
+  /// @brief A list where all indexes with estimates can store their operations
+  ///        Will be applied to the inserter on commit and not applied on abort
+  std::unordered_map<uint64_t,
+                     std::pair<std::vector<uint64_t>, std::vector<uint64_t>>>
+      _trackedIndexOperations;
+
 };
 }
 
