@@ -151,6 +151,14 @@ class RocksDBTransactionState final : public TransactionState {
   /// Not thread safe
   void triggerIntermediateCommit();
 
+  /// @brief Every index can track hashes inserted into this index
+  ///        Used to update the estimate after the trx commited
+  void trackIndexInsert(TRI_voc_cid_t cid, TRI_idx_iid_t idxObjectId, uint64_t hash);
+
+  /// @brief Every index can track hashes removed from this index
+  ///        Used to update the estimate after the trx commited
+  void trackIndexRemove(TRI_voc_cid_t cid, TRI_idx_iid_t idxObjectId, uint64_t hash);
+
  private:
   /// @brief create a new rocksdb transaction
   void createTransaction();
