@@ -1,5 +1,5 @@
 /* jshint globalstrict:false, strict:false */
-/* global assertEqual, assertTrue, assertFalse, assertNotNull */
+/* global assertEqual, assertTrue, assertFalse, assertNotNull, fail */
 
 // //////////////////////////////////////////////////////////////////////////////
 // / @brief test the document interface
@@ -399,7 +399,42 @@ function EdgeIndexSuite () {
         }
         edge.save(vn + '/from' + (i % 20), vn + '/to' + i, { });
       }
-    }
+    },
+
+    testIndexSelectivityAfterAbortion: function () {
+      let docs = [];
+      for (let i = 0; i < 1000; ++i) {
+        docs.push({_from: `${vn}/from${i % 32}`, _to: `${vn}/to${i % 47}`});
+      }
+      edge.save(docs);
+      let idx = edge.getIndexes()[1];
+      let estimateBefore = idx.selectivityEstimate;
+      try {
+        internal.db._executeTransaction({
+          collections: {write: en},
+          action: function () {
+            const vn = 'UnitTestsCollectionVertex';
+            const en = 'UnitTestsCollectionEdge';
+            let docs = [];
+            for (let i = 0; i < 1000; ++i) {
+              docs.push({_from: `${vn}/from${i % 32}`, _to: `${vn}/to${i % 47}`});
+            }
+            // This should significantly modify the estimate
+            // if successful
+            require('@arangodb').db[en].save(docs);
+            throw "banana";
+          }
+        });
+        fail();
+      } catch (e) {
+        assertEqual(e.errorMessage, "banana");
+        // Insert failed.
+        // Validate that estimate is non modified
+        idx = edge.getIndexes()[1];
+        assertEqual(idx.selectivityEstimate, estimateBefore);
+      }
+
+    },
   };
 }
 
