@@ -1,6 +1,10 @@
 devel
 -----
 
+* Fixed an issue with the index estimates in RocksDB in the case a transaction is aborted.
+  Former the index estimates were modified if the transaction commited or not.
+  Now they will only be modified if the transaction commited successfully.
+
 * UI: optimized login view for very small screen sizes
 
 * UI: optimized error messages for invalid query bind parameter
